[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["linkedin_api"]

[project]
name = "linkedin-api-client"
version = "0.3.0"
description = "Python client for LinkedIn Portability API"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["linkedin", "api", "rest.li"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "keyring",
    "beautifulsoup4>=4.12",
    "trafilatura>=2.0",
    "python-dotenv>=1.0",
    "neo4j==5.28.2",
    "neo4j-graphrag[google,openai]>=1.10.1",
    "gradio>=4.0.0",
    "anthropic>=0.84.0",
    "ollama>=0.6.1",
    "tqdm>=4.67",
]

[dependency-groups]
dev = [
    "black",
    "curlify",
    "flake8",
    "flask",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "responses",
    "twine",
    "types-requests>=2.32.4.20260107",
    "types-tqdm>=4.67.3.20260205",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
pythonpath = ["."]
testpaths = [
    "tests",
    "linkedin_api/tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["linkedin_api"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
